trunk/Archive2/27/e2c4d1d0d8f41e/output
main.cpp: In function 'int main()':
main.cpp:109:35: error: invalid static_cast from type 'double*' to type 'int*'
     int* i1 = static_cast<int*>(d1); //peta
                                   ^
